Landing & Login Page Updated

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
       })();
     </script>
     <link rel="icon" href="/favicon.ico">
-    <link href="/output.css" rel="stylesheet">
+    <!-- Tailwind CSS v4 processes styles dynamically -->
 
 
   </head>
